--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume - v2.2.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
-
-<body>
 
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -109,10 +101,10 @@
               </div>
             </div>
             <p>
-              During my free time, you can always catch me binging up any drama I can get my hands on before I have to get back to studying. 
-              If you ever need any recommendations for Chinese, Korean, or Japanese dramas, i'm your gal. I also have two Japanese Spitz 
-              dogs that I love playing with. Because of quarantine, i've been keeping healthy by going out on walks with my dogs once a day 
-              (sometimes even twice ^^).  
+              Hi!! My name is Doris Wei and i'm currently a second year Computer Science major at UC Santa Barbara. I am an optimistic,
+              energetic student who is willing to try new things. There are currently lots of new things I want to learn, so please look forward
+              to more projects in the future. During my free time, I love watching Chinese/Korean dramas and playing with my two Japanese Spitz dogs.
+              If you have any questions, feel free to message me!!
             </p>
           </div>
         </div>
