--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p> work in progress... </p>
+          <!-- <p> work in progress... </p> -->
+          <p><a href="resume.pdf">Resume 2022</a>.</p>
         </div>
         
         <!--
