--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <!-- <p>Hi!! My name is Doris Wei and i'm a second year Computer Science Major at University of California, Santa Barbara.</p> -->
+          <!-- <p>Hi!! My name is Doris Wei and i'm a first year graduate student studying Computer Science and Engineering at Santa Clara University. I previously did my undergrad at University of California, Santa Barbara for Computer Science.</p> -->
         </div>
 
         <div class="row">
@@ -88,15 +88,15 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Doris Wei</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 19</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> San Jose, California</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UC Santa Barbara</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Major:</strong> Computer Science</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Year:</strong> Sophomore</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>School:</strong> Santa Clara University</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Major:</strong> Computer Science and Engineering</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Year:</strong> First Year Graduate Student</li>
                 </ul>
               </div>
             </div>
@@ -235,7 +235,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <!-- <p> work in progress... </p> -->
-          <p><a href="resume.pdf">Resume 2022</a>.</p>
+          <p><a href="resume.pdf">Resume 2024</a>.</p>
         </div>
         
         <!--
@@ -633,7 +633,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>doriswei@ucsb.edu</p>
+                <p>dwdoriswei@gmail.com</p>
               </div>
             </div>
               <!-- <div class="address">
