--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
               </div>
             </div>
             <p>
-              Hi!! My name is Doris Wei and i'm currently a second year Computer Science major at UC Santa Barbara. I am an optimistic,
-              energetic student who is willing to try new things. There are currently lots of new things I want to learn, so please look forward
+              Hi!! My name is Doris Wei and i'm currently a First Year Graduate Student studying Computer Science and Engineering at Santa Clara University. 
+              I did my undergraduate studies at University of California, Santa Barbara focusing on Computer Science. I am an optimistic,
+              energetic student who is always looking to try new things. There are currently lots of new things I want to learn, so please look forward
               to more projects in the future. During my free time, I love watching Chinese/Korean dramas and playing with my two Japanese Spitz dogs.
               If you have any questions, feel free to message me!!
             </p>
